--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,20 @@
 {
   "name": "jparty",
   "dependencies": {
-    "jquery": "^1.11.1",
-    "ember": "1.12.0-beta.1",
-    "ember-data": "1.0.0-beta.16.1",
-    "ember-resolver": "~0.1.12",
-    "loader.js": "ember-cli/loader.js#3.2.0",
-    "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
-    "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
-    "ember-load-initializers": "ember-cli/ember-load-initializers#0.0.2",
-    "ember-qunit": "0.2.11",
-    "ember-qunit-notifications": "0.0.7",
-    "qunit": "~1.17.1",
-    "pretender": "~0.6.0",
-    "ember-inflector": "~1.3.1"
+    "ember": "1.13.13",
+    "ember-cli-shims": "0.0.6",
+    "ember-cli-test-loader": "0.2.1",
+    "ember-data": "1.13.15",
+    "ember-load-initializers": "0.1.7",
+    "ember-qunit": "0.4.16",
+    "ember-qunit-notifications": "0.1.0",
+    "ember-resolver": "~0.1.20",
+    "jquery": "1.11.3",
+    "loader.js": "ember-cli/loader.js#3.4.0",
+    "qunit": "~1.20.0",
+    "pretender": "~0.10.1",
+    "lodash": "~3.7.0",
+    "Faker": "~3.0.0",
+    "blob-polyfill": "^1.0.20150320"
   }
 }
