--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "ember-data": "1.13.15",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
-    "ember-local-storage": "1.1.0",
-    "ember-localstorage-adapter": "0.5.5"
+    "ember-local-storage": "0.1.5"
   }
 }
